tests/ui/contracts/error/precondition-is-not-an-expression.rs
use http_tracing_attributes::contracts;

#[contracts]
#[precondition(struct)]
fn f() {}

fn main() {}
